--- a/data-engineer.html
+++ b/data-engineer.html
@@ -41,18 +41,18 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/signifyd/ae8f5cf0-94ab-4aa7-9025-9238b73dbde4'>Signifyd - Senior Data Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Belfast, United Kingdom</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/signifyd/fb4ecadd-aefa-46c1-9ff0-8f5e242dd688'>Signifyd - Principal Data Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Belfast, United Kingdom</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/geophy/52c0d3e3-6fbd-495b-a8f1-554c4a55b42f'>GeoPhy - Senior GIS Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/geophy/f279d6b2-7d4f-443c-90d5-e840012c096b'>GeoPhy - Senior GIS Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geophy/f279d6b2-7d4f-443c-90d5-e840012c096b'>GeoPhy - Senior GIS Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -136,7 +136,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://cloudacademy.workable.com/j/EF70997CAB'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cloudacademy.workable.com/j/EF70997CAB'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Mendrisio, Ticino, Switzerland Italy Milan</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -144,7 +144,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-rakuten-ichiba-internal-business-system-data-platform-fukuoka-branch-ecbd-9708'>Data Engineer(Rakuten Ichiba : Internal business system, Data Platform) Fukuoka Branch : ECBD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-rakuten-ichiba-internal-business-system-data-platform-fukuoka-branch-ecbd-9708'>Data Engineer(Rakuten Ichiba : Internal business system, Data Platform) Fukuoka Branch : ECBD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -164,7 +164,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/sr-data-engineer-25224'>Sr Data Engineer - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/sr-data-engineer-25224'>Sr Data Engineer - RELX Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... And LexisNexis has over 2PB of the best legal training data in the world! We are 
 looking for an experienced data engineer who is devoted to...</p>
@@ -190,7 +190,7 @@ looking for an experienced data engineer who is devoted to...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -308,7 +308,7 @@ data delivery systems and transform it into beautiful insights, analysis, and?..
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -334,7 +334,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
+<h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
@@ -458,7 +458,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -466,7 +466,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
