--- a/data-analyst.html
+++ b/data-analyst.html
@@ -48,7 +48,7 @@
 	
 <!--Begin body here --> 
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oG289fwJ&__jvst=Employee&__jvsd=sOJTqgwB&__jvsc=Twitter&bid=nwSGWLwg'>Freedom Financial Network Careers - Senior Data Analyst</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/geophy/057a0777-9e2a-405f-bf27-828841484063'>GeoPhy - Data Analyst - Contextual Data</a></h5> 
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bill/3e53ff74-1cb8-4657-a4f3-0fb343a4ac7e'>Bill.com - Finance Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bill/3e53ff74-1cb8-4657-a4f3-0fb343a4ac7e'>Bill.com - Finance Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Bill.com is a leader in financial process automation for small businesses and mid-
 size companies. Making it simple to connect and do business, the Bill.com?...</p>
@@ -197,7 +197,7 @@ Are you?...</p>
 <p>6 days ago ... The Analytics team is a critical function that supports data-driven decision-making 
 throughout Harry's. The team is the central nervous system of the organization?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
+<h5><a href='https://boards.greenhouse.io/myntra/jobs/4354416002'>Job Application for Senior Data Analyst (Inventory) at Myntra Jabong</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply Now. Senior Data Analyst (Inventory). at Myntra Jabong (View all jobs). 
 Bengaluru. NA. Apply for this Job. * Required. First Name *. Last Name *. Email *.</p>
@@ -220,7 +220,7 @@ the entire client lifecycle and eliminates dependence on paper for financial?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drweng/jobs/1766966'>Job Application for Quantitative Trading & Data Analyst at DRW </a></h5> 
+<h5><a href='https://boards.greenhouse.io/drweng/jobs/1766966'>Job Application for Quantitative Trading & Data Analyst at DRW </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -327,7 +327,7 @@ presenting statistical data; and providing technical advice and assistance to?..
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/eSwuAmR3xV/Quality-Assurance-Data-Analyst'>Quality Assurance Data Analyst - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/eSwuAmR3xV/Quality-Assurance-Data-Analyst'>Quality Assurance Data Analyst - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -347,7 +347,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
+<h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Creating automated ways with the help of our data engineer to pipe data such as 
 targets and schedules. Building dashboards within Google Data Studio so our?...</p>
@@ -376,7 +376,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IBIGroup/743999692398884-data-analyst-data-scientist-corporate-systems-'>IBI Group Data Analyst/ Data Scientist (Corporate Systems) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
