--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -63,7 +63,7 @@
 <p>20. Juli 2019 ... TwinCap GmbH has a job opening for Business Intelligence Analyst in Z?rich (
 published: 28.06.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
 <p><span class="badge badge-light">US-MD-Lanham</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -166,7 +166,7 @@ Internet Solutions Corporation.</p>
 <p>3 days ago ... Apply online for the job of Business Intelligence Analyst (12 month FTC, Maternity 
 Cover) at Paymentsense.</p>
 <hr/>
-<h5><a href='https://zengistics.workable.com/jobs/1079356'>Business Intelligence Analyst - Apply online - Zengistics - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zengistics.workable.com/jobs/1079356'>Business Intelligence Analyst - Apply online - Zengistics - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Business Intelligence Analyst at Zengistics.</p>
 <hr/>
@@ -178,7 +178,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
+<h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... The Business Intelligence Analyst will be responsible for researching, collecting, 
 analyzing and reporting operational and business data from multiple sources.</p>
@@ -406,7 +406,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -418,7 +418,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -458,7 +458,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/americanwell/jobs/4352194002'>Job Application for Business Intelligence Reporting Developer at American Well</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/americanwell/jobs/4352194002'>Job Application for Business Intelligence Reporting Developer at American Well</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
